--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"
-        android:layout_marginBottom="23dp" >
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="352dp"
-            android:layout_height="116dp"
-           android:background="@color/material_dynamic_neutral_variant50"
-            android:text="TextView" />
-    </FrameLayout>
+        android:layout_marginBottom="23dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -33,7 +25,7 @@
         app:itemTextColor="#fff"
         app:menu="@menu/nav_menu"/>
 
-    <Button
+    <!--<Button
         android:id="@+id/btn_logout"
         android:text="Logout"
         android:textColor="@color/black"
@@ -43,5 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
+-->
 </RelativeLayout>
+
+
