--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,14 +3,18 @@
     <item
         android:id="@+id/ic_home"
         android:icon="@drawable/ic_home"
-        android:title="Home"/>
+        android:title="Acceuil"/>
     <item
-        android:id="@+id/ic_user"
-        android:icon="@drawable/ic_user"
-        android:title="User"/>
+        android:id="@+id/ic_profil"
+        android:icon="@drawable/ic_profil"
+        android:title="Profil"/>
     <item
         android:id="@+id/ic_new_ad"
         android:icon="@drawable/ic_new_ad"
-        android:title="NewAd"/>
+        android:title="Créer annonce"/>
 
+    <item
+        android:id="@+id/ic_logout"
+        android:icon="@drawable/ic_logout"
+        android:title="Déconnexion"/>
 </menu>
