--- a/app/src/main/res/layout/item_ad.xml
+++ b/app/src/main/res/layout/item_ad.xml
@@ -2,29 +2,45 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:padding="8dp"
-    android:background="?attr/selectableItemBackground"
+
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="@drawable/ad_field"
+    android:layout_margin="5dp"
+    >
 
     <ImageView
         android:id="@+id/image"
         android:scaleType="centerCrop"
         android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp"
+       android:layout_margin="1dp"
+        />
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_marginStart="12dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+
+     >
 
         <TextView
             android:id="@+id/title"
             style="@style/TextAppearance.AppCompat.Display1"
             android:layout_width="wrap_content"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/date_end"
+            style="@style/TextAppearance.AppCompat.Display1"
+            android:layout_width="wrap_content"
+            android:textSize="12dp"
+            android:text="Date de fin : 25/06/2023"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
